Fixed scrolling on mobile devices

--- a/second/dev/css/main.less
+++ b/second/dev/css/main.less
@@ -46,7 +46,7 @@ header {
   .mask {
     position: relative;
     height: 100px;
-    background: rgba(255, 255, 255, .33);
+    // background: rgba(255, 255, 255, .33);
     top: -100px;
   }
 }
